[package]
name = "qmk-via-api"
version = "0.0.1"
edition = "2021"

[lib]
name = "qmk_via_api"
crate-type = ["cdylib", "lib"]  # "cdylib" is necessary to produce a shared library for Python to import from.

[dependencies]
hidapi = "2.6.1"
itertools = "0.12.1"

[dependencies.pyo3]
version = "0.21.0"
features = ["abi3-py38"]  # "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8.
