[package]
name = "qmk-via-api"
license = "GPL-3.0-only"
description = "VIA api implementation for QMK-based keyboards"
authors = ["Stephan Rumswinkel"]
repository = "https://github.com/srwi/qmk-via-api"
readme = "README.md"
version = "0.0.2"
edition = "2021"

[lib]
name = "qmk_via_api"
crate-type = ["cdylib", "lib"]  # "cdylib" is necessary to produce a shared library for Python to import from.

[dependencies]
hidapi = "2.6.1"
itertools = "0.12.1"
num_enum = "0.7.3"
strum = "0.26.3"
strum_macros = "0.26.3"

[dependencies.pyo3]
version = "0.21.0"
features = ["abi3-py38"]  # "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8.
