[package]
name = "qmk-via-api"
license = "GPL-3.0-only"
description = "VIA api implementation for QMK-based keyboards"
authors = ["Stephan Rumswinkel"]
repository = "https://github.com/srwi/qmk-via-api"
readme = "README.md"
version = "0.4.0"
edition = "2021"

[lib]
name = "qmk_via_api"
crate-type = ["cdylib", "lib"]  # "cdylib" is necessary to produce a shared library for Python to import from.

[dependencies]
hidapi = "2.6.3"
itertools = "0.14.0"
num_enum = "0.7.4"
strum = "0.27.2"
strum_macros = "0.27.2"

[dependencies.pyo3]
version = "0.26.0"
features = ["abi3-py38", "multiple-pymethods"]  # "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8.
optional = true

[features]
default = ["python"]
python = ["dep:pyo3"]
